# Kokkos-HSA-alloc-test

./: CMakeLists.txt  README.md  hip_managed_mat_add.cpp  hip_mat_add.cpp  hsa_alloc_test.cpp  kokkos_hsa_alloc_test.cpp  kokkos_mat_add.cpp
